# tscf-eval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: benchmark.rst  counterfactuals.rst  data_loader.rst  evaluator.rst
examples/: benchmark.ipynb  full_results_stratified.json  utils.py
paper/results/: utils.py
paper/results/seed_0/: single_results_stratified_rdst_Chinatown_seed_0.json  single_results_stratified_rocket_Chinatown_seed_0.json
paper/results/seed_1001/: single_results_stratified_rdst_ArrowHead_seed_1001.json  single_results_stratified_rdst_Chinatown_seed_1001.json  single_results_stratified_rdst_ECG200_seed_1001.json  (+11 more)
paper/seed_0/: model_summary_seed_0.csv  single_results_stratified_rdst_ArrowHead_seed_0.json  single_results_stratified_rdst_CBF_seed_0.json  single_results_stratified_rdst_ECG200_seed_0.json  single_results_stratified_rdst_Lightning7_seed_0.json  single_results_stratified_rocket_ArrowHead_seed_0.json  single_results_stratified_rocket_CBF_seed_0.json  single_results_stratified_rocket_ECG200_seed_0.json  single_results_stratified_rocket_Lightning7_seed_0.json  single_results_stratified_timecnn_ArrowHead_seed_0.json  single_results_stratified_timecnn_CBF_seed_0.json  single_results_stratified_timecnn_Lightning7_seed_0.json  single_results_stratified_tsf_ArrowHead_seed_0.json  single_results_stratified_tsf_ECG200_seed_0.json  single_results_stratified_tsf_Lightning7_seed_0.json  single_results_stratified_tsfresh_lr_CBF_seed_0.json  single_results_stratified_tsfresh_lr_Lightning7_seed_0.json
paper/seed_1001/: model_summary_seed_1001.csv  single_results_stratified_rdst_CBF_seed_1001.json  single_results_stratified_rdst_Lightning7_seed_1001.json  single_results_stratified_timecnn_ArrowHead_seed_1001.json  single_results_stratified_timecnn_CBF_seed_1001.json  single_results_stratified_tsf_ArrowHead_seed_1001.json  single_results_stratified_tsf_Chinatown_seed_1001.json
paper/seed_13/: single_results_stratified_rdst_ArrowHead_seed_13.json  single_results_stratified_rocket_ArrowHead_seed_13.json  single_results_stratified_rocket_CBF_seed_13.json  single_results_stratified_rocket_Chinatown_seed_13.json  single_results_stratified_timecnn_ECG200_seed_13.json  single_results_stratified_tsfresh_lr_CBF_seed_13.json
paper/seed_42/: single_results_stratified_rdst_ECG200_seed_42.json  single_results_stratified_rdst_Lightning7_seed_42.json  single_results_stratified_timecnn_CBF_seed_42.json  single_results_stratified_tsf_ECG200_seed_42.json  single_results_stratified_tsf_Lightning7_seed_42.json  single_results_stratified_tsfresh_lr_ECG200_seed_42.json  single_results_stratified_tsfresh_lr_Lightning7_seed_42.json
paper/seed_654/: single_results_stratified_rdst_ECG200_seed_654.json  single_results_stratified_rocket_ArrowHead_seed_654.json  single_results_stratified_timecnn_ArrowHead_seed_654.json  single_results_stratified_timecnn_ECG200_seed_654.json  single_results_stratified_tsf_Chinatown_seed_654.json  single_results_stratified_tsf_ECG200_seed_654.json
results_paper/: all_results_combined.csv  benchmark.ipynb
results_paper/seed_0/: single_results_stratified_timecnn_Chinatown_seed_0.json  single_results_stratified_timecnn_ECG200_seed_0.json  single_results_stratified_tsf_CBF_seed_0.json  single_results_stratified_tsf_Chinatown_seed_0.json  single_results_stratified_tsfresh_lr_ArrowHead_seed_0.json  single_results_stratified_tsfresh_lr_Chinatown_seed_0.json  single_results_stratified_tsfresh_lr_ECG200_seed_0.json
results_paper/seed_1001/: single_results_stratified_rocket_Chinatown_seed_1001.json  single_results_stratified_rocket_ECG200_seed_1001.json  single_results_stratified_timecnn_Lightning7_seed_1001.json  single_results_stratified_tsf_Lightning7_seed_1001.json  single_results_stratified_tsfresh_lr_Chinatown_seed_1001.json
results_paper/seed_13/: model_summary_seed_13.csv  single_results_stratified_rdst_ECG200_seed_13.json  single_results_stratified_rocket_ECG200_seed_13.json  single_results_stratified_timecnn_Lightning7_seed_13.json  single_results_stratified_tsf_Lightning7_seed_13.json  single_results_stratified_tsfresh_lr_Chinatown_seed_13.json  single_results_stratified_tsfresh_lr_Lightning7_seed_13.json
results_paper/seed_42/: model_summary_seed_42.csv  single_results_stratified_rdst_ArrowHead_seed_42.json  single_results_stratified_rocket_ArrowHead_seed_42.json  single_results_stratified_rocket_CBF_seed_42.json  single_results_stratified_rocket_ECG200_seed_42.json  single_results_stratified_timecnn_Chinatown_seed_42.json  single_results_stratified_timecnn_Lightning7_seed_42.json  single_results_stratified_tsf_ArrowHead_seed_42.json  single_results_stratified_tsf_Chinatown_seed_42.json  single_results_stratified_tsfresh_lr_Chinatown_seed_42.json
results_paper/seed_654/: single_results_stratified_rdst_CBF_seed_654.json  single_results_stratified_rdst_Chinatown_seed_654.json  single_results_stratified_rdst_Lightning7_seed_654.json  single_results_stratified_rocket_CBF_seed_654.json  single_results_stratified_rocket_ECG200_seed_654.json  single_results_stratified_rocket_Lightning7_seed_654.json  single_results_stratified_timecnn_CBF_seed_654.json  single_results_stratified_timecnn_Chinatown_seed_654.json  single_results_stratified_tsf_ArrowHead_seed_654.json  single_results_stratified_tsf_CBF_seed_654.json  single_results_stratified_tsf_Lightning7_seed_654.json  single_results_stratified_tsfresh_lr_ArrowHead_seed_654.json  single_results_stratified_tsfresh_lr_CBF_seed_654.json  single_results_stratified_tsfresh_lr_ECG200_seed_654.json  single_results_stratified_tsfresh_lr_Lightning7_seed_654.json
src/tscf_eval/: __init__.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_counterfactuals.py  test_counterfactuals_utils.py  test_data_loader.py  test_evaluator.py  test_multi_criteria.py  test_selection.py
(+215 files in other folders)
